@@ -2,6 +2,7 @@ Summary of important user-visible changes for dist-zilla-pluginbundle-Bioperl
 -----------------------------------------------------------------------------
 
 {{$NEXT}}
+  * Replace use of deprecated [EOLTests] with [Test::EOL]
 
 0.23      2014-09-05 09:46:02-05:00 America/Chicago
   * Add [ExtraTests] in cases where we want to only run tests for release
